'对reward进行了标准化'

--- a/0403要做的.md
+++ b/0403要做的.md
@@ -17,3 +17,15 @@
 8. 当前的transship机制，是基于transship cost一致的基础上的，若不一致则会更复杂
 9. 让central的transship就是实际的transship
 10. central效果还是不好，要debug检查一下，看action是不是都对齐了
+11. reward normalization
+
+## 工作总结
+1. 完成了multi-discrete（可以接受较大的action空间）的编写与运行，但效果不如discrete
+2. central controller的bug找到了，跑出来的分数正常了（就是高于5分了，之前是1分以下），但效果仍不如decentral的
+3. 尝试将目标最大化reward变成了最小化cost，虽然两个问题是等价的，但训练结果普遍更差了（5.703<5.792）。猜测是由于reward的数值绝对值比cost的绝对值小，导致训练上更加容易。目前正对reward进行进一步标准化，以加强这一效果。
+4. 信息共享下，模型效果有所提升（5.816>5.792）
+
+## 待做
+1. 对reward进行标准化(弄好了)
+2. 参考其他强化学习项目，修改multi-discrete与central controller 的网络模型
+3. 基于当下内容对论文结构进行梳理
