'修正了obs未对齐问题'

--- a/0403要做的.md
+++ b/0403要做的.md
@@ -29,8 +29,8 @@
 1. 对reward进行标准化(弄好了，完全弄好了)
 2. 参考其他强化学习项目，修改multi-discrete与central controller 的网络模型
 3. 基于当下内容对论文结构进行梳理
-4. transship撮合机制参考ms那篇文章（Huffman Tree），优先最近的，这样就可以考虑不同地区transship的运费不同的情况
-5. 一些指标加入tensorboard里
+4. transship撮合机制参考ms那篇文章（Huffman Tree），优先最近的，这样就可以考虑不同地区transship的运费不同的情况（没太理解那篇文章为啥要搞个树，直接距离从近到远弄不就行了吗？）
+5. 一些指标加入tensorboard里（加完了）
 6. advantage用的gae（check过了）
 7. multi_quantile demand(我之前好像设置过只披露未来1/(1-gamma)的所有信息，但效果不好，具体要再check一下可能)
 8. 如果只训order，或者transship呢？或者这两个分开训呢？
