--- a/思路.md
+++ b/思路.md
@@ -6,7 +6,7 @@ decentral、proactive transship、lost sales、多期、non-stationary，RL
 3. RL：暂时仅有一篇将pooling和RL结合起来的（效果不是很好，因为没有与任何其他方法作比较），他的设定是reactive transship自动完成，因此模型只需决策订货。（比较像文献1拓展到多期）
 ## 贡献
 1. 库存管理领域，填补了decentral、proactive transship、lost sales、多期的空白
-2. 库存管理+RL领域，是首篇 强化学习+proactive transship，且是首篇多智能体强化学习+联合决策 的研究
+2. 库存管理+RL领域，是首篇 强化学习+proactive transship
 ## 研究内容
 1. 管理启示（主要通过不同RL模型之间的横向对比）：
    + 信息共享的价值（无信息共享、$\color{#6aaaf1}{弱信息共享}$、全局信息共享）
