--- a/0403要做的.md
+++ b/0403要做的.md
@@ -39,6 +39,7 @@
 1. critic_pure_returns 与 advantage_pure_returns 必须同时设为True/False
 
 # 待做
-1. 多agent
+1. 多agent(已做)
 2. critic network 的输入不要有当天的需求
 3. based on demand 的norm，加个截距
+4. 货到付款
