'修复了一个小bug'

--- a/训练加速.md
+++ b/训练加速.md
@@ -18,4 +18,5 @@
 3. 如果能够同时对多个环境进行step呢？会不会快挺多的（懒得搞了）
 4. 网络输出转换来转换去的，脱裤子放屁，给他优化掉
 5. 把leadtime内没有transship挣得钱算出来（改天再写把）
-6. eval
+6. eval 并行（已写）
+7. critic训练时应该200天都参与，actor训练时应该排掉最后leadtime天（看看tensorboard效果怎么样，还行就不改了）
