'把所有参数都放到config里了'

--- a/训练加速.md
+++ b/训练加速.md
@@ -20,3 +20,5 @@
 5. 把leadtime内没有transship挣得钱算出来（改天再写把）
 6. eval 并行（已写）
 7. critic训练时应该200天都参与，actor训练时应该排掉最后leadtime天（看看tensorboard效果怎么样，还行就不改了）
+8. 把各个cost放到config里
+9. formulation写了
