--- a/论文结构.md
+++ b/论文结构.md
@@ -14,7 +14,9 @@
 4. RL+pooling: 暂时仅有一篇将pooling和RL结合起来的（效果不是很好，因为没有与任何其他方法作比较），他的设定是reactive transship自动完成，因此模型只需决策订货。（比较像文献1拓展到多期）
 5. 定位贡献：（1）库存管理领域，填补了decentral、proactive transship、lost sales、多期的空白；（2）库存管理+RL领域，是首篇强化学习+proactive transship, 且首篇madrl+联合决策，训练具有一定困难性
 ## Model Formulation
-1. 建模成马尔可夫过程
+1. 建模普通问题（central）
+2. decentral
+3. mini-pooling
 ## DRL(HAPPO) 
 1. HAPPO，CTDE概念介绍
 2. 如何应用于这个问题，actor，critic
