--- a/论文结构.md
+++ b/论文结构.md
@@ -20,7 +20,7 @@
 ## DRL(HAPPO) 
 1. HAPPO，CTDE概念介绍
 2. 如何应用于这个问题，actor，critic
-3. 训练时的一些小trick：(1) critic输入有未来需求信息 (2) based on demand的normalization
+3. 训练时的一些小trick：(1) critic输入有未来需求信息 (2) based on demand的normalization （3）最后lead time天不参与训练 （4） num_env  (5) 货到付款 
 ## Numerical Results
 1. Baseline
 2. experiment setting
